# Hetvi-internship-work

./: CMakeLists.txt  package.xml
launch/: display.launch.py  gazebo.launch.py
meshes/: Chassis_Right_1.stl  backLeg_Left_1.stl  base_link.stl  front_wheel_1.stl
my_bot_urdf_description/: .gitignore  README.md
my_bot_urdf_description/config/: controllers.yaml  gz_bridge.yaml
my_bot_urdf_description/meshes/: Chassis_Left_1.stl  backLeg_Right_1.stl  front_wheel_left_1.stl
my_bot_urdf_description/urdf/: materials.xacro  my_bot_urdf.gazebo  my_bot_urdf.xacro  sensor.xacro
rviz/: config.rviz
src/: controller.cpp  stair_detector_node.cpp  teleop_node.cpp  voxel_filter_node.cpp
urdf/: my_bot_urdf.trans
wheelchair_isaac/: README.md  package.xml  setup.cfg  setup.py
wheelchair_isaac/config/: balance_params.yaml
wheelchair_isaac/launch/: balancing.launch.py
wheelchair_isaac/meshes/: back_seat_1.stl  base_link.stl  left_wheel_1.stl  link_1_1.stl  link_1_right_1.stl  link_2_1.stl  link_2_right_1.stl  right_wheel_1.stl  track_left_1.stl  track_right_1.stl
wheelchair_isaac/scripts/: balance_controller.py  fourbar_isaac_gui.py  teleop_keyboard.py
wheelchair_isaac/urdf/: robot.gazebo  robot.trans  robot.xacro  robot_flat.urdf
wheelchair_isaac/urdf/isaac_output/configuration/: robot_physics.usd  robot_robot.usd
wheelchair_isaac/urdf/robot_flat/: robot_flat.usd  robot_test.usd
wheelchair_isaac/urdf/robot_flat/configuration/: robot_flat_physics.usd  robot_flat_robot.usd  robot_test_physics.usd
wheelchair_isaac/wheelchair_isaac/: balance_controller_node.py  teleop_keyboard_node.py
worlds/: world.sdf
